<resources>
    <string name="app_name">TodoList</string>
    <string name="newtaskname">Nom de la tâche</string>
    <string name="newtask_before_state">Non effectuée</string>
    <string name="newtask_during_state">En cours</string>
    <string name="newtask_after_state">Terminée</string>
    <string name="newtask_low_priority">Faible</string>
    <string name="newtask_medium_priority">Moyenne</string>
    <string name="newtask_high_priority">Élevée</string>
    <string name="task_status_label">Status</string>
    <string name="task_priority_label">Priorité</string>
    <string name="cancel_new_task_button">Annuler</string>
    <string name="erase_new_task_button">Effacer</string>
    <string name="ok_new_task_button">OK</string>
    <string name="add_task_button">+</string>
    <string name="show_tasks_activity_name">Liste des tâches</string>
    <string name="add_task_activity_name">Ajouter une tâche</string>
    <string name="empty_tasks_list">Aucune tâche n\'a été ajoutée jusque là</string>
    <string name="no_result_found">Aucune tâche existante</string>
</resources>